Incomplete repaint of boxes with inset box-shadow and padding when resized https://bugs.webkit.org/show_bug.cgi?id=59863

Patch by Andrei Bucur <abucur@adobe.com> on 2012-10-05
Reviewed by Simon Fraser.

Source/WebCore:

The patch extends the repaint rectangle to include the inset shadow extent for renderers that resize and need to be repainted. The rectangle computations are also better fragmented and easier to read.

New Test: fast/repaint/box-shadow-inset-repaint.html

* rendering/RenderObject.cpp:
(WebCore::RenderObject::repaintAfterLayoutIfNeeded):
* rendering/style/RenderStyle.cpp:
(WebCore::RenderStyle::getShadowInsetExtent):
(WebCore):
* rendering/style/RenderStyle.h:

LayoutTests:

The patch adds a new pixel test and expected PNG results for mac and chromium-mac. The test fails on Chromium Linux EWS (and maybe others)
so I've added a rule in the TestExpectations file.

* platform/chromium/TestExpectations:
* fast/repaint/box-shadow-inset-repaint.html: Added.
* platform/chromium-mac/fast/repaint/box-shadow-inset-repaint-expected.png: Added.
* platform/mac/fast/repaint/box-shadow-inset-repaint-expected.png: Added.
* platform/mac/fast/repaint/box-shadow-inset-repaint-expected.txt: Added.

Canonical link: https://commits.webkit.org/116481@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130489 268f45cc-cd09-0410-ab3c-d52691b4dbfc